--- a/web.css
+++ b/web.css
@@ -1,6 +1,6 @@
 .dangky{
     width: 1600px;
-    height: 2500px;
+    height: 2200px;
     background-color: white;
 }
 .c{
@@ -102,7 +102,7 @@
 .mucsach{
     width: 215px;
     height: 600px;
-   border: 1px solid black;
+   border: 1px solid rgb(164, 159, 159);
    
 }
 .dangnhap1{
@@ -238,7 +238,7 @@
     padding-top: 25px;
 }.danhmuc{
     width: 1600px;
-    height: 2000px;
+    height: 1000px;
 }
 .giohang{
     width: 1600px;
@@ -280,5 +280,10 @@
     margin-right: auto;
     border-style: inset;
     border-width: 1px;
+}
+.chan{
+    width: 1600px;
+    height: 200px;
+    margin-top: 20px;
 }
 
